# printemps

.github/workflows/: main.yml
application/maxsat/: main.cpp
cmake/application/: CMakeLists.txt
cmake/common/: CpuArch.cmake
cmake/example/: CMakeLists.txt
cmake/extra/: CMakeLists.txt
cmake/test/: CMakeLists.txt  test_example.cmake  test_extra_maxsat_evaluation.cmake  test_helper.cmake  test_model.cmake  test_model_component.cmake  test_mps.cmake  test_multi_array.cmake  test_neighborhood.cmake  test_opb.cmake  test_option.cmake  test_option_enumerate.cmake  test_preprocess.cmake  test_solution.cmake  test_standalone.cmake  test_utility.cmake  test_utility_graph.cmake  test_utility_json.cmake  test_utility_sparse.cmake  test_utility_ucb1.cmake  test_wcnf.cmake
example/: simple_1.cpp
extra/maxsat_evaluation/: main.cpp  maxsat_evaluation_solver.h  maxsat_evaluation_solver_argparser.h
extra/pb_competition_2025/: pb_competition_2025_solver.h  pb_competition_2025_solver_argparser.h
makefile/: Makefile.application  Makefile.example  Makefile.extra  Makefile.test
printemps/: printemps.h  std.h
printemps/model/: model.h
printemps/mps/: mps.h
printemps/opb/: opb.h  opb_constraint.h  opb_metadata.h  opb_term.h  opb_top_cost.h
printemps/standalone/: maxsat_standalone.h  standalone.h
printemps/wcnf/: wcnf.h  wcnf_clause.h  wcnf_metadata.h
python/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
python/printemps/examples/: bin_packing.py  knapsack.py  sudoku.py
python/tests/: test_bin_packing.py  test_standalone.py  test_sudoku.py
python/tools/: vendor.py
script/: build_maxsat_submission.sh
submission/maxsat-2026/: README.md
submission/maxsat-2026/doc/: description-outline.md  description.tex
test/dat/wcnf/: test_00a.wcnf  test_00b.wcnf  test_00c.wcnf  test_00d.wcnf  test_00e.wcnf
test/extra/maxsat_evaluation/: test_maxsat_evaluation_solver.cpp
test/opb/: test_opb.cpp  test_opb_top_cost.cpp
test/preprocess/: test_verifier.cpp
test/standalone/: maxsat_standalone.cpp
test/wcnf/: test_wcnf.cpp  test_wcnf_clause.cpp  test_wcnf_metadata.cpp
